fixing filters on mobile disposition

--- a/resources/sass/filter.scss
+++ b/resources/sass/filter.scss
@@ -52,10 +52,6 @@
     &.filters-small {
         max-width: 280px;
     }
-
-    @media (max-width: 576px) {
-        right: calc(-20vw - 30px) !important;
-    }
 }
 
 div[dusk="filter-selector"] {
@@ -79,7 +75,7 @@ div[dusk="filter-selector"] {
 .filter-menu-wrapper {
     align-items: center;
 
-    @media (max-width: 640px) {
+    @media (max-width: 992px) {
         flex-direction: column;
         align-items: flex-end;
     }
